# Kinetek

./: .gitignore  CLAUDE.md  PROJECT.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
scripts/: generate-icon.cjs
src/: App.tsx  index.css  types.ts
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ApiPanel.tsx  ClaudePanel.tsx  CodeEditor.tsx  CommitGraph.tsx  ConfirmDialog.tsx  ContractPanel.tsx  Dashboard.tsx  DashboardHome.tsx  DiffViewer.tsx  EditProjectDialog.tsx  Explorer.tsx  Field.tsx  FileBrowser.tsx  FileTree.tsx  FileViewer.tsx  FrameworkTag.tsx  GitPanel.tsx  GithubPage.tsx  LogConsole.tsx  Markdown.tsx  Onboarding.tsx  PreviewDialog.tsx  ProjectCard.tsx  ProjectPage.tsx  ProjectPanel.tsx  ProjectWizard.tsx  RefsSidebar.tsx  SettingsDialog.tsx  Sidebar.tsx  StatusBadge.tsx  TerminalView.tsx  TitleBar.tsx  icons.tsx
src/components/widgets/: ActivityWidget.tsx  NeedsAttentionWidget.tsx  ProjectRow.tsx  QuickActionsWidget.tsx  RecentProjectsWidget.tsx  StatsWidget.tsx  Widget.tsx
src/components/wizard/: AppTypeStep.tsx  CategoryStep.tsx  DetailsStep.tsx  DoneStep.tsx  ErrorStep.tsx  GenerateStep.tsx  ModeStep.tsx  PlatformStep.tsx  PreflightStep.tsx  PurposeStep.tsx  RunningStep.tsx  StackStep.tsx  TemplateStep.tsx
src/hooks/: useProjectStatuses.ts
src/lib/: ai.ts  catalog.ts  categories.ts  generate.ts  github.ts  logStore.ts  monaco.ts  platform.ts  sampleData.ts  tauri.ts  templates.ts
